// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CashInChunksResults should not render with empty queryData 1`] = `
<div>
  <div
    aria-live="polite"
    id="results"
  >
    <h2
      class="text-3xl md:text-5xl font-bold mb-6 text-blue-700 md:mb-8"
    >
      Your results
    </h2>
    <dl>
      <dt
        class="mb-2 font-medium"
      >
        Taking
         
        <span />
         
        from a pension worth
         
        <span />
         
        could give you an estimated:
      </dt>
      <dd
        class="mb-4"
      >
        <span
          class="text-4xl font-bold"
        />
      </dd>
      <dt
        class="mb-2 font-medium"
      >
        We estimate you'll pay:
      </dt>
      <dd
        class="mb-4 text-4xl font-bold"
      >
        <span
          class="inline "
        />
         
        in tax
      </dd>
      <dt
        class="mb-2 font-medium"
      >
        Leaving:
      </dt>
      <dd
        class="mb-4 text-4xl font-bold"
      >
        <span />
         
        in your pot
      </dd>
    </dl>
    <div
      class=""
      data-testid="errors"
    >
      <fieldset
        class="mb-4"
      >
        <label
          class="text-2xl font-medium text-gray-800 inline-flex mb-0"
          for="updateChunk"
        >
          See what happens if you take a different amount:
        </label>
        <p
          class="text-base text-gray-400 mb-2"
        >
          Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
        </p>
        <div
          class="flex"
        >
          <div
            class="relative mr-2 max-w-[360px]"
          >
            <input
              aria-label="See what happens if you take a different amount, in pounds."
              aria-required="true"
              class="tool-field w-full ml-0 h-auto focus:outline-none focus:shadow-focus-outline peer border-gray-400 border py-[8px] pl-[43px] rounded focus:border-blue-700"
              data-testid="updateChunk"
              id="updateChunk"
              inputmode="numeric"
              name="updateChunk"
              type="text"
              value=""
            />
            <span
              aria-hidden="true"
              class="absolute bg-gray-100 top-0 left-0 py-2 px-3 rounded-l border-gray-400 border border-solid leading-[31px] text-[18px] h-full peer-focus:border-blue-700 peer-focus:border-r-gray-400"
            >
              £
            </span>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      class="mt-8 text-base"
    />
  </div>
</div>
`;

exports[`CashInChunksResults should render correctly 1`] = `
<div>
  <div
    aria-live="polite"
    id="results"
  >
    <h2
      class="text-3xl md:text-5xl font-bold mb-6 text-blue-700 md:mb-8"
    >
      Your results
    </h2>
    <dl>
      <dt
        class="mb-2 font-medium"
      >
        Taking
         
        <span>
          £1,000
        </span>
         
        from a pension worth
         
        <span>
          £100,000
        </span>
         
        could give you an estimated:
      </dt>
      <dd
        class="mb-4"
      >
        <span
          class="text-4xl font-bold"
        >
          £1,000
        </span>
      </dd>
      <dt
        class="mb-2 font-medium"
      >
        We estimate you'll pay:
      </dt>
      <dd
        class="mb-4 text-4xl font-bold"
      >
        <span
          class="inline "
        >
          £0
        </span>
         
        in tax
      </dd>
      <dt
        class="mb-2 font-medium"
      >
        Leaving:
      </dt>
      <dd
        class="mb-4 text-4xl font-bold"
      >
        <span>
          £99,000
        </span>
         
        in your pot
      </dd>
    </dl>
    <div
      class=""
      data-testid="errors"
    >
      <fieldset
        class="mb-4"
      >
        <label
          class="text-2xl font-medium text-gray-800 inline-flex mb-0"
          for="updateChunk"
        >
          See what happens if you take a different amount:
        </label>
        <p
          class="text-base text-gray-400 mb-2"
        >
          Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
        </p>
        <div
          class="flex"
        >
          <div
            class="relative mr-2 max-w-[360px]"
          >
            <input
              aria-label="See what happens if you take a different amount, in pounds."
              aria-required="true"
              class="tool-field w-full ml-0 h-auto focus:outline-none focus:shadow-focus-outline peer border-gray-400 border py-[8px] pl-[43px] rounded focus:border-blue-700"
              data-testid="updateChunk"
              id="updateChunk"
              inputmode="numeric"
              name="updateChunk"
              type="text"
              value="1,000"
            />
            <span
              aria-hidden="true"
              class="absolute bg-gray-100 top-0 left-0 py-2 px-3 rounded-l border-gray-400 border border-solid leading-[31px] text-[18px] h-full peer-focus:border-blue-700 peer-focus:border-r-gray-400"
            >
              £
            </span>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      class="mt-8 text-base"
    />
  </div>
</div>
`;
